fix(i3): decrease gap

--- a/dotfiles/config/eww/eww.scss
+++ b/dotfiles/config/eww/eww.scss
@@ -16,7 +16,7 @@
 
 .quote-text {
   color: #ddd;
-  font-size: 1.129rem;
+  font-size: 1rem;
   background: rgba(0, 0, 0, .5);
   padding: 0 16px;
 }
